# coding-agent

./: .env.example  .gitattributes  .gitignore  .gitmodules  Brewfile  CLAUDE.md  LICENSE  README.md  architecture.md  pyproject.toml  winget-packages.json
.github/workflows/: ci.yml
.skills/: change-map.yaml
infra/: docker-compose.yml
infra/backups/: .gitkeep
notes/: README.md
plans/: INBOX.md  INDEX.md  REFERENCE.md  STATUS.md  roadmap.md
scripts/: bootstrap-mac.sh  bootstrap-win.ps1  check-consistency.sh  golden.ps1  golden.sh  pull-models.ps1  pull-models.sh  restart-mac.sh  restart-win.ps1  scrub-file.ps1  scrub-file.sh  start-mac.sh  start-win.ps1  work-win.ps1
src/code_context/: __init__.py  agents_md.py  config.py  confluence.py  dev.py  embeddings.py  lifecycle.py  llm.py  obs.py  server.py  tools.py
src/code_context/db/: __init__.py
src/code_context/indexer/: __init__.py  docs.py  java.py  notes.py  rollup.py
src/code_context/migrations/: 0001_initial_schema.sql  README.md
tests/: docx_fixture.py  pdf_fixture.py  test_agents_md.py  test_confluence.py  test_dev.py  test_docs.py  test_docs_docx.py  test_docs_pdf.py  test_embeddings.py  test_golden_docs.py  test_golden_notes.py  test_golden_retrieval.py  test_golden_rollup.py  test_java_indexer.py  test_lifecycle.py  test_llm.py  test_notes.py  test_obs.py  test_rollup.py  test_scaffold.py  test_tools.py
tests/fixtures/docs/: huge-section.html  injection.html  no-headings.html  payments-rules.html  skipped-levels.html
tests/fixtures/docs-golden/: billing-rules.html  security-policy.html
tests/fixtures/minirepo/auth/: PasswordHasher.java
tests/fixtures/minirepo/billing/: InvoiceService.java  pom.xml
tests/fixtures/minirepo/billing/model/: LineItem.java
tests/fixtures/minirepo/math/: VectorMath.java
